particle force field self effect number #90346

Closed
opened 2021-08-01 04:02:00 +02:00 by eroMoD · 7 comments
Member

System Information
Operating system: Ubuntu Studio 21.04
Graphics card: GeForce GTX 980

Blender Version
Broken: blender-2.93.1

Short description of error
When the particle force field self effect number (for the force, force-field) is set to three, the actual rendered amount is four. Also, when its set to 7, the actual render amount it 8.

Exact steps for others to reproduce the error

  • create a particle system instance emitting 10,000 particles all at once with no velocity or gravity.
  • Go into particle properties-->force-field settings-->self effect
    effect amount:3 or 7
    Type:force
    set falloff power to 7.7 to see the individual particles with the force more clearly.
  • playback timeline
**System Information** Operating system: Ubuntu Studio 21.04 Graphics card: GeForce GTX 980 **Blender Version** Broken: blender-2.93.1 **Short description of error** When the particle force field self effect number (for the force, force-field) is set to three, the actual rendered amount is four. Also, when its set to 7, the actual render amount it 8. **Exact steps for others to reproduce the error** - create a particle system instance emitting 10,000 particles all at once with no velocity or gravity. - Go into **particle properties**-->**force-field settings**-->self effect effect amount:3 or 7 Type:force set falloff power to 7.7 to see the individual particles with the force more clearly. - playback timeline
Author
Member

Added subscriber: @eroMoD

Added subscriber: @eroMoD
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Philipp Oeser self-assigned this 2021-08-03 12:28:39 +02:00
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Can confirm, it is a rounding issue, fix incoming...

Can confirm, it is a rounding issue, fix incoming...

This issue was referenced by b35a96e195

This issue was referenced by b35a96e195b100dbad68721065f431b168b7945b
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#90346
No description provided.